generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

model Role {
  id          String   @id @default(uuid()) @db.Uuid
  name        String   @unique
  description String?
  permissions String[] @default([])
  users       User[]
  employees   Employee[]
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@map("roles")
}

model User {
  id           String   @id @default(uuid()) @db.Uuid
  username     String   @unique
  email        String?  @unique
  passwordHash String
  roleId       String   @db.Uuid
  role         Role     @relation(fields: [roleId], references: [id], onDelete: Restrict)
  status       String   @default("active")
  failedLoginAttempts Int @default(0)
  lockoutUntil DateTime?
  lastLogin    DateTime?
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
  employee     Employee?
  biometricCredentials BiometricCredential[]

  @@index([lockoutUntil])
  @@map("users")
}


model BiometricCredential {
  id                 String   @id @default(uuid()) @db.Uuid
  keyId              String
  userId             String
  user               User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  publicKeyDer       Bytes
  deviceName         String?
  createdAt          DateTime @default(now())
  revokedAt          DateTime?

  @@unique([userId, keyId])
  @@map("biometric_credentials")
}

model Employee {
  id             String   @id @default(uuid()) @db.Uuid
  employeeId     String   @unique
  name           String
  userId         String?  @unique @db.Uuid
  user           User?    @relation(fields: [userId], references: [id], onDelete: SetNull)
  mobile         String?
  nationalId     String?  @unique
  birthDate      DateTime? @db.Date
  dateOfBirth    DateTime? @db.Date
  gender         String?   // male | female
  jobTitle       String?
  profession     String?
  hourlyRate     Decimal  @db.Decimal(10, 2)
  // حقول الراتب المباشرة على الموظف
  baseSalary     Decimal? @db.Decimal(14, 2)
  livingAllowance Decimal? @db.Decimal(14, 2) // بدل غلاء معيشة
  currency       String   @default("SYP")
  scheduledStart String?
  scheduledEnd   String?
  employmentStartDate DateTime? @db.Date
  terminationDate DateTime? @db.Date
  terminationReason String?
  isSettled      Boolean @default(false)
  department     String   @default("Warehouse")
  departmentId   String?  @db.Uuid
  departmentEntity Department? @relation(fields: [departmentId], references: [id], onDelete: SetNull)
  roleId         String?  @db.Uuid
  role           Role?    @relation(fields: [roleId], references: [id], onDelete: SetNull)
  status         String   @default("active")
  // إعدادات الراتب الدائمة للموظف
  workDaysInPeriod Int @default(26)
  hoursPerDay Int @default(8)
  overtimeCalculation Json? // إعدادات إضافي الأسبوع/العيد
  gracePeriodMinutes Int @default(15)
  attendanceRecords AttendanceRecord[]
  dailyAttendanceLogs DailyAttendanceLog[] @relation("DailyAttendanceLogs")
  advances       EmployeeAdvance[]
  leaveRequests  LeaveRequest[]
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  @@index([status])
  @@index([name])
  @@index([createdAt])
  @@index([status, employeeId])
  @@index([department, status])
  @@index([departmentId])
  @@index([status, createdAt])
  @@index([department, status, createdAt])
  @@map("employees")
}


model Department {
  id         String    @id @default(uuid()) @db.Uuid
  name       String    @unique
  employees  Employee[]
  createdAt  DateTime  @default(now())
  updatedAt  DateTime  @updatedAt

  @@map("departments")
  @@index([createdAt])
}

enum LeaveRequestType {
  PAID
  UNPAID
  SICK
  ADMIN
  DEATH
  OTHER
}

enum LeaveRequestStatus {
  PENDING
  APPROVED
  REJECTED
  CANCELLED
}

model LeaveRequest {
  id          String              @id @default(uuid()) @db.Uuid
  employeeId  String
  employee    Employee            @relation(fields: [employeeId], references: [employeeId], onDelete: Cascade)
  leaveType   LeaveRequestType
  status      LeaveRequestStatus   @default(PENDING)
  isPaid      Boolean             @default(false)
  startDate   DateTime            @db.Date
  endDate     DateTime            @db.Date
  reason      String?
  notes       String?
  createdAt   DateTime            @default(now())
  updatedAt   DateTime            @updatedAt

  @@index([employeeId])
  @@index([employeeId, status])
  @@index([leaveType, status])
  @@index([startDate, endDate])
  @@map("leave_requests")
}

model Device {
  id        String   @id @default(uuid()) @db.Uuid
  deviceId  String   @unique
  name      String
  location  String
  model     String   @default("ZK Teco")
  ip        String?
  port      Int?
  status    String   @default("active")
  lastSync  DateTime?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("devices")
  @@index([status, createdAt])
  @@index([location, status, createdAt])
}

model AttendanceRecord {
  id         String   @id @default(uuid()) @db.Uuid
  employeeId String
  employee   Employee @relation(fields: [employeeId], references: [employeeId], onDelete: Cascade)
  timestamp  DateTime
  type       String
  deviceId   String?
  location   String?
  source     String   @default("device")
  verified   Boolean  @default(false)
  notes      String?
  date       String
  shiftPair  Json?
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@index([date])
  @@index([date, timestamp])
  @@index([employeeId, timestamp])
  @@index([date, employeeId])
  @@index([deviceId, timestamp])
  @@index([employeeId, type, date])
  @@index([employeeId, date, timestamp])
  @@index([type, date])
  @@map("attendance_records")
}

// ---------------------------------------------------------------------------
// Daily Attendance Logs — Event-based logging for audit trail & biometric integration
// ---------------------------------------------------------------------------
enum DailyRecordType {
  ABSENCE              // غياب
  DELAY_MINUTES        // تأخير بالدقائق
  OVERTIME_MINUTES     // إضافي بالدقائق
  PAID_LEAVE           // إجازة مدفوعة
  UNPAID_LEAVE         // إجازة غير مدفوعة
  SICK_LEAVE           // إجازة مرضية
  ADMIN_LEAVE          // إجازة إدارية
  DEATH_LEAVE          // إجازة وفاة
  EARLY_LEAVE_MINUTES  // خروج مبكر بالدقائق
}

model DailyAttendanceLog {
  id          String          @id @default(uuid()) @db.Uuid
  employeeId  String
  employee    Employee        @relation("DailyAttendanceLogs", fields: [employeeId], references: [employeeId], onDelete: Cascade)
  date        DateTime        @db.Date
  recordType  DailyRecordType
  value       Decimal         @db.Decimal(10, 2) // e.g., 1 (for 1 day) or 120 (for 120 minutes)
  notes       String?         @db.Text
  source      String          @default("manual") // manual | biometric | calculated
  createdBy   String?
  createdAt   DateTime        @default(now())
  updatedAt   DateTime        @updatedAt

  @@index([employeeId, date])
  @@index([date])
  @@index([employeeId, recordType, date])
  @@index([recordType, date])
  @@map("daily_attendance_logs")
}

model Product {
  id           String       @id @default(uuid()) @db.Uuid
  sku          String       @unique
  name         String
  category     String
  unitPrice    Decimal      @db.Decimal(12, 2)
  costPrice    Decimal      @db.Decimal(12, 2)
  reorderLevel Int          @default(10)
  status       String       @default("active")
  createdAt    DateTime     @default(now())
  updatedAt    DateTime     @updatedAt

  stockLevels StockLevel[]

  @@index([createdAt])
  @@index([status, createdAt])
  @@index([category, status, createdAt])
  @@map("products")
}

model StockLevel {
  id        String   @id @default(uuid()) @db.Uuid
  sku       String
  location  String
  quantity  Int      @default(0)
  reserved  Int      @default(0)
  available Int      @default(0)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  product Product? @relation(fields: [sku], references: [sku], onDelete: Cascade)

  @@unique([sku, location])
  @@map("stock_levels")
}

model ImportJob {
  id          String   @id @default(uuid()) @db.Uuid
  jobId       String   @unique
  entity      String
  fileName    String
  uploadedBy  String
  uploadedAt  DateTime @default(now())
  status      String   @default("pending")
  totalRows   Int      @default(0)
  successRows Int      @default(0)
  errorRows   Int      @default(0)
  errors      Json     @default("[]")
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@index([entity, uploadedAt])
  @@index([uploadedAt])
  @@index([status, uploadedAt])
  @@map("import_jobs")
}

model PayrollRun {
  id               String      @id @default(uuid()) @db.Uuid
  runId            String      @unique
  periodStart      DateTime    @db.Date
  periodEnd        DateTime    @db.Date
  periodType       String      @default("monthly")
  runDate          DateTime    @default(now())
  runBy            String?
  status           String      @default("draft")
  approvalStatus   String      @default("pending")
  approvedBy       String?
  approvalDate     DateTime?
  totalEmployees   Int         @default(0)
  totalGrossPay    Decimal     @default(0) @db.Decimal(14, 2)
  totalDeductions  Decimal     @default(0) @db.Decimal(14, 2)
  totalNetPay      Decimal     @default(0) @db.Decimal(14, 2)
  currency         String      @default("SYP")
  notes            String?
  items            PayrollItem[]

  @@index([runDate])
  @@index([status, runDate])
  @@index([approvalStatus, runDate])
  @@index([periodStart])
  @@index([periodStart, periodEnd])
  @@map("payroll_runs")
}

model PayrollItem {
  id              String   @id @default(uuid()) @db.Uuid
  payrollRunId    String   @db.Uuid
  employeeId      String
  employeeName    String
  department      String?
  hoursWorked     Decimal  @db.Decimal(8, 2)
  hourlyRate      Decimal  @db.Decimal(10, 2)
  grossPay        Decimal  @db.Decimal(14, 2)
  totalDeductions Decimal  @db.Decimal(14, 2)
  netPay          Decimal  @db.Decimal(14, 2)
  netPayRounded   Decimal  @default(0) @db.Decimal(14, 2)
  roundingDifference Decimal @default(0) @db.Decimal(14, 2)
  netPayWithAdvance Decimal @default(0) @db.Decimal(14, 2)
  anomalies       String[] @default([])
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  run PayrollRun @relation(fields: [payrollRunId], references: [id], onDelete: Cascade)

  @@unique([payrollRunId, employeeId])
  @@index([employeeId, createdAt])
  @@map("payroll_items")
}

// ---------------------------------------------------------------------------
// Payroll Inputs — per-employee values used in payroll formula
// ---------------------------------------------------------------------------
model PayrollInput {
  id                    String   @id @default(uuid()) @db.Uuid
  employeeId            String
  periodStart           DateTime @db.Date
  periodEnd             DateTime @db.Date
  lateMinutes           Int      @default(0)
  earlyLeaveMinutes     Int      @default(0)
  absenceDays           Int      @default(0)
  sickLeaveDays         Int      @default(0)
  adminLeaveDays        Int      @default(0)
  unpaidLeaveDays       Int      @default(0)
  deathLeaveDays        Int      @default(0)
  unpaidHours           Decimal  @default(0) @db.Decimal(8, 2)
  overtimeRegularMinutes Int     @default(0)
  overtimeWeekendDays   Decimal  @default(0) @db.Decimal(6, 2)
  penaltyAmount         Decimal  @default(0) @db.Decimal(14, 2)
  clothingDeduction     Decimal  @default(0) @db.Decimal(14, 2)
  bonusAdjustment       Decimal  @default(0) @db.Decimal(14, 2)
  advanceAmount         Decimal  @default(0) @db.Decimal(14, 2)
  insuranceAmount       Decimal? @db.Decimal(14, 2)
  transportAllowanceOverride Decimal? @db.Decimal(14, 2)
  notes                 String?
  createdAt             DateTime @default(now())
  updatedAt             DateTime @updatedAt

  @@unique([employeeId, periodStart, periodEnd])
  @@index([periodStart, periodEnd])
  @@index([employeeId, periodStart])
  @@map("payroll_inputs")
}

// ---------------------------------------------------------------------------
// Salary & Occupation — base salary, allowances, incentives per employee
// ---------------------------------------------------------------------------
model EmployeeSalary {
  id                      String   @id @default(uuid()) @db.Uuid
  employeeId              String   @unique
  profession              String?
  baseSalary              Decimal  @db.Decimal(14, 2)
  lumpSumSalary           Decimal  @default(0) @db.Decimal(14, 2) // الراتب المقطوع
  livingAllowance         Decimal  @default(0) @db.Decimal(14, 2) // بدل غلاء معيشة
  // البدلات المحسوبة تلقائياً من الفرق
  responsibilityAllowance Decimal  @default(0) @db.Decimal(14, 2) // 50% من الفرق
  extraEffortAllowance    Decimal  @default(0) @db.Decimal(14, 2) // 30% من الفرق
  productionIncentive     Decimal  @default(0) @db.Decimal(14, 2) // 20% من الفرق
  // التأمينات (تُدخل يدوياً)
  insuranceAmount         Decimal  @default(0) @db.Decimal(14, 2)
  transportAllowance      Decimal  @default(0) @db.Decimal(14, 2)
  createdAt               DateTime @default(now())
  updatedAt               DateTime @updatedAt

  @@map("employee_salaries")
}

// ---------------------------------------------------------------------------
// Advances (سلف) — employee advance/loan records
// ---------------------------------------------------------------------------
model EmployeeAdvance {
  id              String   @id @default(uuid()) @db.Uuid
  employeeId      String
  employee        Employee @relation(fields: [employeeId], references: [employeeId], onDelete: Cascade)
  advanceType     String   @default("salary")   // salary | clothing | other
  totalAmount     Decimal  @db.Decimal(14, 2)
  installmentAmount Decimal @default(0) @db.Decimal(14, 2)
  remainingAmount Decimal  @db.Decimal(14, 2)
  notes           String?
  issueDate       DateTime @default(now())
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  @@index([employeeId])
  @@index([employeeId, issueDate])
  @@index([employeeId, remainingAmount])
  @@map("employee_advances")
}

model DeletedRecordHistory {
  id         String   @id @default(uuid()) @db.Uuid
  entityType String
  recordId   String
  payload    Json
  deletedBy  String?
  deletedAt  DateTime @default(now())
  restoredBy String?
  restoredAt DateTime?

  @@index([entityType, recordId])
  @@index([entityType, deletedAt])
  @@index([entityType, restoredAt, deletedAt])
  @@map("deleted_record_history")
}

// ---------------------------------------------------------------------------
// Insurance (تامينات) — social insurance details per employee
// ---------------------------------------------------------------------------
model EmployeeInsurance {
  id                  String   @id @default(uuid()) @db.Uuid
  employeeId          String   @unique
  insuranceSalary     Decimal  @db.Decimal(14, 2)
  socialSecurityNumber String?
  registrationDate    DateTime?
  createdAt           DateTime @default(now())
  updatedAt           DateTime @updatedAt

  @@map("employee_insurance")
}

// ---------------------------------------------------------------------------
// Bonuses & Assistance — per-period bonus and assistance amounts
// ---------------------------------------------------------------------------
model EmployeeBonus {
  id               String   @id @default(uuid()) @db.Uuid
  employeeId       String
  bonusAmount      Decimal  @default(0) @db.Decimal(14, 2)
  bonusReason      String?
  assistanceAmount Decimal  @default(0) @db.Decimal(14, 2)
  period           String?  // e.g. "2026-04"
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  @@index([employeeId])
  @@index([employeeId, period])
  @@index([period, createdAt])
  @@map("employee_bonuses")
}

// ---------------------------------------------------------------------------
// Penalties & Deductions — restaurant/clothing/administrative penalties
// ---------------------------------------------------------------------------
model EmployeePenalty {
  id         String   @id @default(uuid()) @db.Uuid
  employeeId String
  category   String   // restaurant | clothing | penalty | other
  amount     Decimal  @db.Decimal(14, 2)
  reason     String?
  issueDate  DateTime @default(now())
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@index([employeeId])
  @@index([employeeId, issueDate])
  @@map("employee_penalties")
}

// ---------------------------------------------------------------------------
// Transportation — إدارة الباصات والنقل
// ---------------------------------------------------------------------------
model Bus {
  id                  String   @id @default(uuid()) @db.Uuid
  busId               String   @unique  // كود الباص
  route               String            // الخط / مسار الرحلة
  plateNumber         String   @unique  // رقم اللوحة
  driverName          String            // اسم السائق
  driverPhone         String            // رقم السائق (10 أرقام سورية)
  totalCost           Decimal  @db.Decimal(14, 2)  // التكلفة الإجمالية (ل.س)
  companyDeductionPct Decimal  @db.Decimal(5, 2)   // حسم الشركة بالنسبة المئوية
  capacity            Int                           // سعة الركاب
  // مبلغ أجرة النقل التي تُحسم من راتب الموظف
  employeeDeductionAmount Decimal @default(0) @db.Decimal(14, 2)
  status              String   @default("active")  // active | inactive
  passengers          BusPassenger[]
  createdAt           DateTime @default(now())
  updatedAt           DateTime @updatedAt

  @@index([status])
  @@index([route, status])
  @@map("buses")
}

model BusPassenger {
  id         String   @id @default(uuid()) @db.Uuid
  busId      String   @db.Uuid
  bus        Bus      @relation(fields: [busId], references: [id], onDelete: Cascade)
  employeeId String
  joinDate   DateTime @default(now()) @db.Date
  leaveDate  DateTime? @db.Date
  status     String   @default("active")  // active | inactive
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@unique([busId, employeeId])
  @@index([employeeId])
  @@index([busId, status])
  @@map("bus_passengers")
}
